// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render active spinner overlay 1`] = `
<div>
  <div
    class="spinnerOverlay active"
    data-is-active="true"
    data-testid="spinner-overlay"
  >
    <div
      class="loading"
    />
  </div>
</div>
`;

exports[`render inactive spinner overlay 1`] = `
<div>
  <div
    class="spinnerOverlay"
    data-is-active="false"
    data-testid="spinner-overlay"
  >
    <div
      class="loading"
    />
  </div>
</div>
`;
